# webhooker

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  galaxy.yml  pyproject.toml
.github/scripts/: stamp_version.py
.github/workflows/: ci.yml  release-ansible-collection.yml  reusable-version.yml
ansible_collections/malaber/webhooker/: README.md  galaxy.yml
ansible_collections/malaber/webhooker/examples/generic/: requirements.yml
ansible_collections/malaber/webhooker/examples/generic/files/example-app/deploy/webhooker/: compose.production.yml  compose.review.yml
ansible_collections/malaber/webhooker/examples/generic/files/example-app/deploy/webhooker/env/: review.common.env
ansible_collections/malaber/webhooker/examples/generic/projects/: example-app-production.yaml  example-app-review.yaml
ansible_collections/malaber/webhooker/examples/generic/vars/: secrets.example.yml  webhooker.yml
ansible_collections/malaber/webhooker/examples/listerine/: deploy-webhooker.yml
ansible_collections/malaber/webhooker/examples/listerine/projects/: listerine-production.yaml  listerine-review.yaml
ansible_collections/malaber/webhooker/examples/listerine/vars/: secrets.example.yml  webhooker.yml
ansible_collections/malaber/webhooker/roles/webhooker/: README.md
ansible_collections/malaber/webhooker/roles/webhooker/defaults/: main.yml
ansible_collections/malaber/webhooker/roles/webhooker/meta/: main.yml
ansible_collections/malaber/webhooker/roles/webhooker/tasks/: main.yml
ansible_collections/malaber/webhooker/roles/webhooker/templates/: docker-compose.yml.j2
config/: example.production.yaml  example.project.yaml
examples/generic/: deploy-webhooker.yml
examples/generic/files/example-app/deploy/webhooker/: compose.production.yml  compose.review.yml
examples/generic/files/example-app/deploy/webhooker/env/: production.common.env
examples/generic/projects/: example-app-production.yaml  example-app-review.yaml
examples/generic/vars/: webhooker.yml
roles/webhooker/: README.md
roles/webhooker/defaults/: main.yml
roles/webhooker/tasks/: main.yml
roles/webhooker/templates/: docker-compose.yml.j2  envfile.j2  project.yaml.j2  secret-envfile.j2
scripts/: bootstrap.sh
systemd/: webhooker-api.service  webhooker-worker.service  webhooker-worker.timer
tests/: conftest.py  test_ansible_bundle_examples.py  test_ansible_examples.py  test_api.py  test_cli.py  test_config.py  test_deployer.py  test_docker_image.py  test_github_client.py  test_reconcile_plan.py  test_release_metadata.py  test_security.py  test_state.py  test_wake.py
webhooker/: __init__.py  api.py  cli.py  config.py  deployer.py  github_client.py  logging_utils.py  models.py  paths.py  security.py  state.py  wake.py  worker.py
