[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webhooker"
version = "0.1.0"
description = "Reusable PR preview deployment reconciler for Docker Compose"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
webhooker-api = "webhooker.cli:run_api"
webhooker-worker = "webhooker.cli:run_worker"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["webhooker*"]
