[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webhooker"
version = "0.3.0"
description = "Reusable PR review and production deployment reconciler for Docker Compose"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "PyYAML>=6.0.2,<7.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[project.scripts]
webhooker-api = "webhooker.cli:run_api"
webhooker-worker = "webhooker.cli:run_worker"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["webhooker*"]

[tool.pytest.ini_options]
addopts = "--cov=webhooker --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["webhooker"]
